# remote-monitor

./: Dockerfile  README.md  app.sh  app_setup.sh  config_interpol  entrypoint.sh  healthchecks_heartbeat.sh  pyproject.toml  python_setup.sh  remote_monitor  requirements.txt
app/: __init__.py  __main__.py
config/: app.conf  pip_freeze  remote_monitor.conf  remote_monitor_pip  requirements.txt  supervisord.conf  systemd.app.service
sampler/: sampler.ino
