[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tai Lucas <tglucas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
pyzmq = "^25.0.0"
rpi-gpio = "^0.7.1"
sentry-sdk = "^1.15.0"
smbus2 = "^0.4.2"
abelectronics = {git = "https://github.com/abelectronicsuk/ABElectronics_Python_Libraries.git"}
pylib = {path = "pylib"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
