[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tai Lucas <tglucas@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
app = "app.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.1"
pyzmq = "^26.0.2"
rpi-gpio = "^0.7.1"
sentry-sdk = "^2.0.1"
smbus2 = "^0.4.2"
abelectronics = {git = "https://github.com/abelectronicsuk/ABElectronics_Python_Libraries.git"}
scikit-build-core = "^0.9.3"
tailucas-pylib = "^0.4.0"
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
